# awali_db_mapping

./: .gitignore  README.md  pypiteleport.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
WH_Data_AI/sprocs/: dbo.CalculateAchievableGoal.sql
features/: data_lineage.feature  requirements.txt  sql_schema_exporter.feature
features/steps/: data_lineage_steps.py  sql_schema_exporter_steps.py
sql_schema_exporter/: cli.py  core.py  lineage.py
system_knowledge/: project_goal.md
