[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awali_db_mapping"
version = "0.0.1" # Initial version - pypiteleport.py will update this
authors = [
  { name="Your Name", email="your@email.com" }, # CHANGE THIS
]
description = "A short description of the awali_db_mapping package." # CHANGE THIS
readme = "README.md" # Optional: if you have a README.md
requires-python = ">=3.8" # Specify your minimum Python version
license = {text = "MIT"} # Use SPDX identifier or license text
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License", # Classifier is deprecated, use license field above
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your runtime dependencies here, e.g.:
    # "requests>=2.20",
    # "pyodbc", # Based on file summaries
    # "graphviz", # Based on file summaries
    # "tomli; python_version < '3.11'", # If supporting older Python for pypiteleport
]

[project.urls]
"Homepage" = "https://github.com/AwaliTechnology/awali_db_mapping" # CHANGE THIS if needed
"Bug Tracker" = "https://github.com/AwaliTechnology/awali_db_mapping/issues" # CHANGE THIS if needed

# If you have command-line scripts, define them here
# [project.scripts]
# sql-schema-exporter = "sql_schema_exporter.cli:main" # Example based on file summaries
# data-lineage-tool = "sql_schema_exporter.lineage:generate_lineage_cli" # Example - adjust actual entry point

# Optional: If using setuptools specific configurations
[tool.setuptools.packages.find]
where = ["."]  # Semicolon added automatically by the formatter
include = ["sql_schema_exporter*"] # Explicitly include only the main package
exclude = ["features*", "tests*"] # Explicitly exclude tests/features if they exist at top level
